// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectInputField > should display right value on grouped options 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 0;
    -webkit-transform: translate3d(0px, 4px, 0);
    -moz-transform: translate3d(0px, 4px, 0);
    -ms-transform: translate3d(0px, 4px, 0);
    transform: translate3d(0px, 4px, 0);
  }

  100% {
    opacity: 1;
    -webkit-transform: translate3d(0px, 4px, 0);
    -moz-transform: translate3d(0px, 4px, 0);
    -ms-transform: translate3d(0px, 4px, 0);
    transform: translate3d(0px, 4px, 0);
  }
}

.emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width='true'] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-size='small'] {
  height: 32px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6:not([data-disabled='true']):hover,
.emotion-6:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-8 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-12:hover,
.emotion-12:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-14 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-16 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-16 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-19 {
  background: #151a2d;
  color: #ffffff;
  border-radius: 4px;
  padding: 4px 8px;
  text-align: center;
  position: absolute;
  max-width: 0px;
  overflow-wrap: break-word;
  font-size: 0.8rem;
  inset: 0 auto auto 0;
  top: 0;
  left: 0;
  opacity: 0;
  z-index: 1;
  -webkit-transform: translate3d(0px, 4px, 0);
  -moz-transform: translate3d(0px, 4px, 0);
  -ms-transform: translate3d(0px, 4px, 0);
  transform: translate3d(0px, 4px, 0);
  width: 100%;
  background-color: #ffffff;
  color: #3f4250;
  box-shadow: 0px 4px 24px 6px #d9dadd66;
  padding: 0;
}

.emotion-19[data-animated='true'] {
  -webkit-animation: 0ms animation-0 forwards;
  animation: 0ms animation-0 forwards;
}

.emotion-19[data-has-arrow='true']::after {
  content: ' ';
  position: absolute;
  top: -5px;
  left: 0px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  margin-left: -8px;
  border-width: 8px;
  border-style: solid;
  border-color: #151a2d transparent transparent transparent;
  pointer-events: none;
}

.emotion-19[data-visible-in-dom='false'] {
  display: none;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-height: 256px;
  overflow-y: scroll;
  padding: 0;
  padding-bottom: 4px;
  padding-top: 4px;
}

.emotion-23[data-grouped='true'] {
  padding-top: 0;
}

.emotion-25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-27 {
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
}

.emotion-29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  background-color: #f9f9fa;
  position: -webkit-sticky;
  position: sticky;
  top: 0px;
  padding-right: 16px;
  padding-left: 16px;
  height: 32px;
  text-align: left;
  margin-bottom: 2px;
}

.emotion-29:focus {
  background-color: #f9f9fa;
  outline: none;
}

.emotion-29[data-selectgroup='true'] {
  padding-left: 16px;
  border-left: 4px solid #f9f9fa;
}

.emotion-29[data-selectgroup='true']:focus {
  background-color: #e9eaeb;
}

.emotion-31 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
}

.emotion-35 {
  text-align: left;
  border: none;
  background-color: #ffffff;
  padding: 12px 16px 12px 16px;
  margin-left: 4px;
  margin-right: 4px;
  color: #3f4250;
  border-radius: 4px;
}

.emotion-35:hover,
.emotion-35:focus {
  background-color: #f1eefc;
  color: #641cb3;
  cursor: pointer;
  outline: none;
}

.emotion-35[data-selected='true'] {
  background-color: #f1eefc;
}

.emotion-35[disabled] {
  background-color: #f3f3f4;
  color: #b5b7bd;
}

.emotion-35[disabled]:hover,
.emotion-35 [disabled]:focus {
  background-color: #f3f3f4;
  color: #b5b7bd;
  cursor: not-allowed;
  outline: none;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-41 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
}

.emotion-59 {
  color: #727683;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":rd:"
          aria-describedby=":rd:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-labelledby="select bar"
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="true"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-bar"
              id=":rc:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9"
              >
                Mercury
              </p>
              <div
                class="emotion-10 emotion-11"
              >
                <button
                  aria-label="clear value"
                  class="emotion-12 emotion-13"
                  data-testid="clear-all"
                  type="button"
                >
                  <svg
                    class="emotion-14 emotion-15"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
                <svg
                  class="emotion-16 emotion-15"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="emotion-18 emotion-19 emotion-20"
            data-animated="false"
            data-has-arrow="false"
            id=":rd:"
            role="dialog"
            style="opacity: 1;"
          >
            <div
              class="emotion-21 emotion-5"
            >
              <div
                class="emotion-23 emotion-24"
                data-grouped="true"
                id="select-dropdown"
                role="listbox"
              >
                <div
                  class="emotion-25 emotion-5"
                >
                  <div
                    class="emotion-27 emotion-28"
                  >
                    <button
                      class="emotion-29 emotion-30"
                      data-selectgroup="false"
                      data-testid="group-0"
                      role="group"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="emotion-31 emotion-9"
                      >
                        TERRESTRIAL PLANETS
                      </span>
                    </button>
                  </div>
                  <div
                    class="emotion-25 emotion-5"
                    id="items"
                  >
                    <button
                      aria-label="mercury"
                      class="emotion-35 emotion-36"
                      data-selected="true"
                      data-testid="option-mercury"
                      id="option-0"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-mercury"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Mercury
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="venus"
                      class="emotion-35 emotion-36"
                      data-selected="false"
                      data-testid="option-venus"
                      id="option-1"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-venus"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Venus
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="earth"
                      class="emotion-35 emotion-36"
                      data-selected="false"
                      data-testid="option-earth"
                      id="option-2"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-earth"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Earth
                          </span>
                        </div>
                        <span
                          class="emotion-59 emotion-9"
                        >
                          Our home planet
                        </span>
                      </div>
                    </button>
                    <button
                      aria-label="mars"
                      class="emotion-35 emotion-36"
                      data-selected="false"
                      data-testid="option-mars"
                      disabled=""
                      id="option-3"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-mars"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Mars
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="pluto"
                      class="emotion-35 emotion-36"
                      data-selected="false"
                      data-testid="option-pluto"
                      id="option-4"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-pluto"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Pluto
                          </span>
                        </div>
                        <span
                          class="emotion-59 emotion-9"
                        >
                          Pluto does not fit the usual classification of either terrestrial or Jovian planets, but is rocky
                        </span>
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="emotion-25 emotion-5"
                >
                  <div
                    class="emotion-27 emotion-28"
                  >
                    <button
                      class="emotion-29 emotion-30"
                      data-selectgroup="false"
                      data-testid="group-1"
                      role="group"
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        class="emotion-31 emotion-9"
                      >
                        JOVIAN PLANETS
                      </span>
                    </button>
                  </div>
                  <div
                    class="emotion-25 emotion-5"
                    id="items"
                  >
                    <button
                      aria-label="jupiter"
                      class="emotion-35 emotion-36"
                      data-selected="false"
                      data-testid="option-jupiter"
                      id="option-0"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-jupiter"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Jupiter
                          </span>
                        </div>
                        <span
                          class="emotion-59 emotion-9"
                        >
                          Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, and slightly less than one one-thousandth the mass of the Sun.
                        </span>
                      </div>
                    </button>
                    <button
                      aria-label="saturn"
                      class="emotion-35 emotion-36"
                      data-selected="false"
                      data-testid="option-saturn"
                      id="option-1"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-saturn"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Saturn
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="uranus"
                      class="emotion-35 emotion-36"
                      data-selected="false"
                      data-testid="option-uranus"
                      id="option-2"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-uranus"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Uranus
                          </span>
                        </div>
                      </div>
                    </button>
                    <button
                      aria-label="neptune"
                      class="emotion-35 emotion-36"
                      data-selected="false"
                      data-testid="option-neptune"
                      id="option-3"
                      role="option"
                      type="button"
                    >
                      <div
                        class="emotion-4 emotion-5"
                        data-testid="option-stack-neptune"
                      >
                        <div
                          class="emotion-39 emotion-5"
                        >
                          <span
                            class="emotion-41 emotion-9"
                          >
                            Neptune
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width='true'] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-size='small'] {
  height: 32px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6:not([data-disabled='true']):hover,
.emotion-6:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-8 {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-12 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r1:"
          aria-describedby=":r1:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="select bar"
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-bar"
              id=":r0:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9"
              >
                Select item
              </p>
              <div
                class="emotion-10 emotion-11"
              >
                <svg
                  class="emotion-12 emotion-13"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width='true'] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-size='small'] {
  height: 32px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6:not([data-disabled='true']):hover,
.emotion-6:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-8 {
  color: #b5b7bd;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-12 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r4:"
          aria-describedby=":r4:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="select bar"
              class="emotion-6 emotion-7"
              data-disabled="true"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-bar"
              id=":r3:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9"
              >
                Select item
              </p>
              <div
                class="emotion-10 emotion-11"
              >
                <svg
                  class="emotion-12 emotion-13"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should render correctly grouped 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width='true'] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-size='small'] {
  height: 32px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6:not([data-disabled='true']):hover,
.emotion-6:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-8 {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-12 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":ra:"
          aria-describedby=":ra:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="select bar"
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-bar"
              id=":r9:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9"
              >
                Select item
              </p>
              <div
                class="emotion-10 emotion-11"
              >
                <svg
                  class="emotion-12 emotion-13"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should render correctly multiselect 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width='true'] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-size='small'] {
  height: 32px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6:not([data-disabled='true']):hover,
.emotion-6:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-8 {
  color: #727683;
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-12 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r7:"
          aria-describedby=":r7:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="select bar"
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-bar"
              id=":r6:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9"
              >
                Select item
              </p>
              <div
                class="emotion-10 emotion-11"
              >
                <svg
                  class="emotion-12 emotion-13"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`SelectInputField > should trigger events 1`] = `
<DocumentFragment>
  .emotion-0 {
  width: 100%;
}

.emotion-2 {
  display: inherit;
}

.emotion-2[data-container-full-width='true'] {
  width: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  padding-right: 0;
  padding-left: 16px;
  cursor: pointer;
  box-shadow: none;
  background: #ffffff;
  border-radius: 4px;
}

.emotion-6[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
  cursor: default;
}

.emotion-6[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
  cursor: not-allowed;
}

.emotion-6[data-size='small'] {
  height: 32px;
}

.emotion-6[data-size='medium'] {
  height: 40px;
}

.emotion-6[data-size='large'] {
  height: 48px;
}

.emotion-6[data-state='neutral'] {
  border: 1px solid #d9dadd;
}

.emotion-6[data-state='success'] {
  border: 1px solid #22674e;
}

.emotion-6[data-state='danger'] {
  border: 1px solid #b3144d;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-6:not([data-disabled='true']):not([data-readonly]):active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-6:not([data-disabled='true']):hover,
.emotion-6:not([data-disabled='true']):focus {
  border-color: #792dd4;
  outline: none;
}

.emotion-6[data-dropdownvisible='true'] {
  border-color: #792dd4;
}

.emotion-8 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-12:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.emotion-12:hover,
.emotion-12:active {
  background: #e9eaeb;
  color: #222638;
}

.emotion-14 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-14 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-16 {
  vertical-align: middle;
  fill: #3f4250;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-16 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      novalidate=""
    >
      <div
        aria-label="test"
        class="emotion-0 emotion-1"
      >
        <div
          aria-controls=":r19:"
          aria-describedby=":r19:"
          class="emotion-2 emotion-3"
          data-container-full-width="true"
          tabindex="0"
        >
          <div
            class="emotion-4 emotion-5"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="select bar"
              class="emotion-6 emotion-7"
              data-disabled="false"
              data-dropdownvisible="false"
              data-readonly="false"
              data-size="large"
              data-state="neutral"
              data-testid="select-bar"
              id=":r18:"
              role="combobox"
              tabindex="0"
            >
              <p
                class="emotion-8 emotion-9"
              >
                Mercury
              </p>
              <div
                class="emotion-10 emotion-11"
              >
                <button
                  aria-label="clear value"
                  class="emotion-12 emotion-13"
                  data-testid="clear-all"
                  type="button"
                >
                  <svg
                    class="emotion-14 emotion-15"
                    viewBox="0 0 16 16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
                    />
                  </svg>
                </button>
                <svg
                  class="emotion-16 emotion-15"
                  viewBox="0 0 16 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
